--- a/src/mockup.html
+++ b/src/mockup.html
@@ -6,41 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/a66e30c900.js" crossorigin="anonymous"></script>
-    <title>My Team!</title>
+    <title>PROJECT NAME</title>
 </head>
 <body>
     <header class="container-fluid bg-danger text-center py-4">
-        <h1 class="text-light">My Team!</h1>
+        <h1 class="text-light">The PROJECT NAME Team!</h1>
     </header>
     <main class="container">
         <div class="row">
-                <div class="card bg-light mx-3 my-3 mb-3 shadow p-3 mb-5 bg-white rounded" style="max-width: 18rem;">
+            <!-- manager block -->
+                <div class="card bg-light mx-3 my-3 shadow p-3 mb-5 rounded" style="max-width: 18rem;">
                     <div class="card-header bg-primary text-light">
                         <h3>Jenn</h2>
-                        <h4>Manager</h4>
+                        <h5><i class="fa-solid fa-briefcase"></i> Manager</h5>
                     </div>
                         <div class="card-body text-dark">
-                           <ul class="justify-item-center">
-                            <li class="list-group-item">ID</li>
-                            <li class="list-group-item">email</li>
-                            <li class="list-group-item">other thing</li>
-                           </ul>
+                            <ul class="justify-item-center">
+                                <li class="list-group-item">ID</li>
+                                <li class="list-group-item">Email: <a href="mailto:EMAIL@email.com">email@email.com</a></li>
+                                <li class="list-group-item">Office number: </li>
+                            </ul>
                         </div>
                     </div>
                 
-                <div class="card bg-light mx-3 my-3 mb-3 shadow p-3 mb-5 bg-white rounded" style="max-width: 18rem;">
+                    <!-- engineer block -->
+                <div class="card bg-light mx-3 my-3 shadow p-3 mb-5 rounded" style="max-width: 18rem;">
                     <div class="card-header bg-primary text-light">
                         <h3>Jenn</h2>
-                        <h4>Manager</h4>
+                        <h5><i class="fa-solid fa-screwdriver-wrench"></i> Engineer</h5>
                     </div>
                         <div class="card-body text-dark">
-                           <ul class="justify-item-center">
-                            <li class="list-group-item">ID</li>
-                            <li class="list-group-item">email</li>
-                            <li class="list-group-item">other thing</li>
-                           </ul>
+                            <ul class="justify-item-center">
+                                <li class="list-group-item">ID</li>
+                                <li class="list-group-item">Email: <a href="mailto:EMAIL@email.com">email@email.com</a></li>
+                                <li class="list-group-item">Github: </li>
+                            </ul>
                         </div>
-                    </div>             
+                    </div>  
+                    
+                    <!-- intern block -->
+                <div class="card bg-light mx-3 my-3 shadow p-3 mb-5 rounded" style="max-width: 18rem;">
+                    <div class="card-header bg-primary text-light">
+                        <h3>Jenn</h2>
+                        <h5><i class="fa-solid fa-graduation-cap"></i> Intern</h5>
+                    </div>
+                        <div class="card-body text-dark">
+                            <ul class="justify-item-center">
+                                <li class="list-group-item">ID</li>
+                                <li class="list-group-item">Email: <a href="mailto:EMAIL@email.com">email@email.com</a></li>
+                                <li class="list-group-item">School: SCHOOL</li>
+                            </ul>
+                        </div>
+                    </div>     
+        <!-- end body tags -->
         </div>    
     </main>
 </body>
